ADD: comments in html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body >
-    <!-- header -->
+    <!-- HEADER -->
     <header class="page-header">
         <!-- navbar -->
         <nav>
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <!-- main -->
+    <!-- MAIN -->
     <main class=" main-page">
         <!-- HERO SECTION -->
         <section class="hero">
@@ -155,18 +155,17 @@
                             <div class="col-4">
                                 <div class="card-developement">
                                     <div class="row-card-developement ">
-                                            <div>
-                                                <figure class="img-developement">
-                                                    <img src="./img/planning2.png" alt="">
-                                                </figure>
-                                            </div>
-                                            <div>
-                                                <h4 class="card-title-developement">Add Developement</h4>
-                                                <p class="card-paragraph-developement"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, recusandae. Quam aliquam quo nemo fuga hic.</em></p>
-                                            <div>
-                                                <span class="arrow-down"><a href="#"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></a></span>
-                                            </div>
-                                            </div>
+                                        <div>
+                                            <figure class="img-developement">
+                                                <img src="./img/planning2.png" alt="">
+                                            </figure>
+                                        </div>
+                                        <div>
+                                            <h4 class="card-title-developement">Add Developement</h4>
+                                            <p class="card-paragraph-developement"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, recusandae. Quam aliquam quo nemo fuga hic.</em></p>
+                                        <div>
+                                            <span class="arrow-down"><a href="#"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></a></span>
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
@@ -176,7 +175,7 @@
                 </div>
             </div>
         </section>
-        <!--TESTIMONIALS-->
+        <!-- TESTIMONIALS -->
         <section class="tesimonials">
             <div class="container">
                 <!--subtitle / title / paragraph-->
@@ -198,7 +197,7 @@
                                 </div>
                                 <div class="col-8">
                                     <div>
-                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi! <span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
+                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!  <span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
                                         <p class="name-testimonial">Nat Reynolds</p>
                                     </div>
                                 </div>
@@ -216,7 +215,7 @@
                                 </div>
                                 <div class="col-8">
                                     <div>
-                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!<span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
+                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi! <span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
                                         <p class="name-testimonial">Julia Reynolds</p>
                                     </div>
                                 </div>
@@ -234,7 +233,7 @@
                                 </div>
                                 <div class="col-8">
                                     <div>
-                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!<span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
+                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi! <span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
                                         <p class="name-testimonial">Nat Reynolds</p>
                                     </div>
                                 </div>
@@ -242,9 +241,7 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </section>
         <!-- BENEFITS -->
         <section class="benefits">
@@ -363,18 +360,25 @@
             <div class="container-medium">
                 <div class="row">
                     <div class="col-8">
+                        <!--title biography-->
                         <h2 class="title-biography">About Us</h2>
+                        <!--first description-->
                         <p class="description-biography-top ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit mollitia nesciunt, possimus porro fugiat quam veritatis consequatur. Ullam dicta alias ut libero numquam deserunt ex quam repellat magni! Recusandae, iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt repellat fugit autem perferendis unde, nostrum, quasi eum dicta eveniet inventore iste accusamus labore distinctio ut laudantium asperiores earum officiis atque.</p>
+                        <!--second description-->
                         <p class="description-biography-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quasi sunt quaerat quas quisquam officiis autem excepturi consequatur quidem iste ullam, mollitia sit cupiditate dolor a recusandae soluta nostrum doloremque.</p>
                     </div>
                     <div class="col-4">
+                        <!-- card biography -->
                         <div class="card-biography">
                             <div class="row-card-biography">
                                 <figure class="figure-relative">
                                     <img class="img-biography" src="./img/about.jpg" alt="">
+                                    <!--q sign-->
                                     <span class="about-q-left"><i class="fa-solid fa-quote-left" style="color: #9792E4;;"></i></span>
                                 </figure>
+                                <!--title card-->
                                 <h4 class="title-card-biography">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti!</h4>
+                                <!--button card-->
                                 <a class="button-card-biography" href="#"><i class="fa-brands fa-linkedin linkedin" style="color: white;"></i> Find me on linkedin</a>
                             </div>
                         </div>
@@ -411,11 +415,13 @@
     <!-- END PAGE -->
     <footer class="end-page">
         <div class="container-small">
+            <!--top footer-->
             <div class="top-footer">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio provident natus culpa libero earum magnam itaque quos ex. Possimus, amet!
                 </p>
             </div>
+            <!--bottom footer-->
             <div class="bottom-footer">
                 <p>
                     <a class="a-footer" href="#">Lorem ipsum</a> dolor sit amet consectetur <a class="a-footer" href="#">adipisicing elit.</a>
